rust/macros/tests/invalid/target/debug/deps/single_argument_rs-ff5e1fecc5b26cbf.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libsingle_argument_rs-ff5e1fecc5b26cbf.rmeta: single-argument.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-ff5e1fecc5b26cbf.d: single-argument.rs Cargo.toml

single-argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
